tests/checker/fail/duplicate_main.can
main = () => Unit {
    "first".print()
}

main = () => Unit {
    "second".print()
}
